# traffic_cls_for_servicemesh

./: .gitignore  README.md  detection_results.json  evaluation_results.txt  requirements.txt
AI/: evaluate.py  evaluate_32.py  evaluate_resource.py  train.py  train_32.py
AI/Dataset_Distillation/: data_distribution.py
AI/Preprocessing/: cic_data_preprocess.py  data_remove.py  data_split.py  packet_concat.py  preprocess.py  test.py
AI/Sliding_window/: represent.py
AI_Real/CAE/: train.py  train_k8s.py  train_v2.py
AI_Real/CAE_Attention/: evaluate.py  evaluate_k8s.py  train.py  train_k8s.py  train_v2.py
AI_Real/CNN_OCSVM/: compare_proposed_to_global.py  distribution.py  evaluate.py  evaluate_k8s.py  evaluate_k8s_global.py  train.py  train_deep.py  train_k8s.py  train_k8s_deep.py  train_k8s_global.py
AI_Real/DRAEM/: evaluate.py  train.py
AI_Real/DeepSVDD/: evaluate_k8s.py  train.py  train_k8s.py
AI_Real/Diffusion_AE/: train.py  train_k8s.py
AI_Real/KD_CNN_OCSVM/: evaluate.py  evaluate_k8s.py  train_1x16.py  (+11 more)
Data_Distribution/: data_representation.py  data_representation_32.py
Data_Reconstruction_Distribution/: data_representation.py
Detection_Overhead/: image.py
Network_Traffic_Overhead/: calculate.py  calculate_v2.py  test.py  traffic_to_image.py
Preprocess/: cic_preprocess.py  cic_preprocess_fri_v2.py  cic_preprocess_friday.py  k8s_preprocess_v2.py
ServiceMesh/: config_k8s.yaml
ServiceMesh/DataPlane/Proxy/Rust/: Cargo.toml
ServiceMesh/DataPlane/Proxy/Rust/src/: main.rs
ServiceMesh/DataPlane/Proxy/v1_c/: CMakeLists.txt  base.cpp  proxy.cpp
(+128 files in other folders)
