[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] } 
tch = { git = "https://github.com/LaurentMazare/tch-rs.git" }
torch-sys = { git = "https://github.com/LaurentMazare/tch-rs.git", package = "torch-sys" }
anyhow = "1.0"
libc = "0.2"
